<resources>
    <string name="app_name">Kalkulator Bidang Datar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pertama">Pertama</string>
    <string name="kedua">Kedua</string>
    <string name="ketiga">Ketiga</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hasil">Hasil</string>
    <string name="hasil1">Hasil</string>
    <string name="tinggi">Tinggi</string>
    <string name="alas">Alas</string>
    <string name="jari_jari">Jari-jari</string>
</resources>